--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.4.5",
     "mongodb": "^6.11.0",
     "mongoose": "^8.8.3",
+    "nodemon": "^3.1.7",
     "normalize.css": "^8.0.1",
     "vite-plugin-html-inject": "^1.1.2"
   }
